# gitops-deployer

./: .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt
configs/: pipeline.example.yaml
deployer/pipeline/: history.py  runner.py  steps.py
deployer/utils/: __init__.py  config.py  logger.py  notify.py
deployer/webhook/: server.py  signature.py
tests/: test_pipeline.py  test_signature.py
